fix scrollbar and change color email input

--- a/movie website/css/style.css
+++ b/movie website/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Neonderthaw&family=Oleo+Script:wght@400;700&family=Poppins:ital,wght@0,100;0,300;0,700;0,800;0,900;1,200&family=Rubik:wght@400;500;700;800;900&display=swap');
 
-/* font-family: 'Poppins', sans-serif; */
 * {
     margin: 0;
     padding: 0;
@@ -11,21 +10,20 @@
     scroll-behavior: smooth;
 }
 
-html::webkit-scrollbar {
-    width: 20px;
+ ::-webkit-scrollbar {
+    width: 15px;
 }
 
-::-webkit-scrollbar-track {
+ ::-webkit-scrollbar-track {
     background-color: var(--bg-color);
-    /* background: red; */
   }
 
-  ::-webkit-scrollbar-thumb {
+ ::-webkit-scrollbar-thumb {
     background: var(--main-color);
     border-radius: 50px;
   }
 
-  ::-webkit-scrollbar-thumb:hover {
+ ::-webkit-scrollbar-thumb:hover {
     background: rgb(216, 11, 11);
   }
 
@@ -274,6 +272,7 @@ h4 {
     padding: 7px;
     margin-right: 10px;
     border-radius:5px ;
+    background-color: #c2c2c2;
 }
 
 .contact .btn {
